[gd_scene load_steps=14 format=3 uid="uid://bah1d3q4pbtie"]

[ext_resource type="FontFile" uid="uid://b75tskygvw2u6" path="res://Fonts/Roboto-Regular.ttf" id="1_4htwb"]
[ext_resource type="FontFile" uid="uid://hi05li2fdpnu" path="res://Fonts/Roboto-Bold.ttf" id="2_5xofk"]
[ext_resource type="Script" path="res://Scenes/Intro/intro.gd" id="2_i8sul"]
[ext_resource type="Texture2D" uid="uid://dq4x8d6ltfh3l" path="res://Art/tooltip-icon.png" id="4_6efrf"]
[ext_resource type="Script" path="res://Scenes/Intro/ExeSelect.gd" id="4_76plu"]
[ext_resource type="Theme" uid="uid://dnl67yen3fxii" path="res://Themes/tooltip_theme.tres" id="4_sw86n"]
[ext_resource type="Texture2D" uid="uid://r0m8pq83tjhe" path="res://Art/open-folder.png" id="5_haktb"]

[sub_resource type="Theme" id="Theme_5dw0q"]
default_font = ExtResource("1_4htwb")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu1te"]
bg_color = Color(1, 1, 1, 1)
border_width_right = 4
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wmddy"]
bg_color = Color(0, 0.454902, 0.615686, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a616s"]
bg_color = Color(7.60466e-06, 0.559653, 0.753467, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j57q1"]
bg_color = Color(1.58831e-06, 0.372635, 0.507479, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tq0ue"]
bg_color = Color(1.34766e-06, 0.281037, 0.386997, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5dw0q")
script = ExtResource("2_i8sul")

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 108.0
grow_horizontal = 2
theme_override_fonts/bold_font = ExtResource("2_5xofk")
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 64
bbcode_enabled = true
text = "[center][b]Let's get started!"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExeSelectText" type="RichTextLabel" parent="VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Select your source port exe"
fit_content = true

[node name="TooltipTexture" type="TextureRect" parent="VBoxContainer/ExeSelectText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 194.0
offset_top = -26.0
offset_right = 214.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "The source port is the engine that will run the game. 

The most popular source port is GZDoom."
theme = ExtResource("4_sw86n")
texture = ExtResource("4_6efrf")
expand_mode = 1

[node name="ExeSelectMargin" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="ExeSelect" type="Panel" parent="VBoxContainer/ExeSelectMargin"]
unique_name_in_owner = true
self_modulate = Color(0.615686, 0.00784314, 0.0313726, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_yu1te")
script = ExtResource("4_76plu")
windows_file_filter = "*.exe"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ExeSelectMargin/ExeSelect"]
modulate = Color(0.851769, 0.851769, 0.851769, 1)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -12.0
offset_right = -61.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
fit_content = true
scroll_following = true
autowrap_mode = 1

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/ExeSelectMargin/ExeSelect"]
title = "Open a File"
initial_position = 2
size = Vector2i(350, 200)
always_on_top = true
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*; All Files")
use_native_dialog = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ExeSelectMargin/ExeSelect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -24.0
offset_right = -10.0
offset_bottom = 24.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_haktb")
expand_mode = 1

[node name="FlatpakLocatedText" type="RichTextLabel" parent="VBoxContainer/ExeSelectMargin/ExeSelect"]
unique_name_in_owner = true
visible = false
modulate = Color(0.964706, 0.964706, 0.215686, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 74.0
offset_right = 15.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 18
text = "Flatpak located! No further action needed."

[node name="Padding" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="IWADSelectText" type="RichTextLabel" parent="VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Select your IWAD"
fit_content = true

[node name="TooltipTexture" type="TextureRect" parent="VBoxContainer/IWADSelectText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 123.0
offset_top = -26.0
offset_right = 143.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "An iwad is a file that contains the base game. 

The most popular iwad for modding is Doom 2."
theme = ExtResource("4_sw86n")
texture = ExtResource("4_6efrf")
expand_mode = 1

[node name="IWADSelectMargin" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="IWADSelect" type="Panel" parent="VBoxContainer/IWADSelectMargin"]
self_modulate = Color(0.615686, 0.00784314, 0.0313726, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_yu1te")
script = ExtResource("4_76plu")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/IWADSelectMargin/IWADSelect"]
modulate = Color(0.851769, 0.851769, 0.851769, 1)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -12.0
offset_right = -61.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
fit_content = true
scroll_following = true
autowrap_mode = 1

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/IWADSelectMargin/IWADSelect"]
title = "Open a File"
initial_position = 2
size = Vector2i(350, 200)
always_on_top = true
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.wad,*.pk3,*.ipk3,*.pk7; Doom Wad", "*; All Files")
use_native_dialog = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/IWADSelectMargin/IWADSelect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -24.0
offset_right = -10.0
offset_bottom = 24.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_haktb")
expand_mode = 1

[node name="Padding2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ContinueMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="ContinueButton" type="Button" parent="VBoxContainer/ContinueMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_wmddy")
theme_override_styles/hover = SubResource("StyleBoxFlat_a616s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j57q1")
theme_override_styles/disabled = SubResource("StyleBoxFlat_tq0ue")
disabled = true
text = "Continue"

[connection signal="mouse_entered" from="VBoxContainer/ExeSelectMargin/ExeSelect" to="VBoxContainer/ExeSelectMargin/ExeSelect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ExeSelectMargin/ExeSelect" to="VBoxContainer/ExeSelectMargin/ExeSelect" method="_on_mouse_exited"]
[connection signal="file_selected" from="VBoxContainer/ExeSelectMargin/ExeSelect/FileDialog" to="." method="_on_exe_file_selected"]
[connection signal="file_selected" from="VBoxContainer/ExeSelectMargin/ExeSelect/FileDialog" to="VBoxContainer/ExeSelectMargin/ExeSelect" method="_on_file_dialog_file_selected"]
[connection signal="mouse_entered" from="VBoxContainer/IWADSelectMargin/IWADSelect" to="VBoxContainer/IWADSelectMargin/IWADSelect" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/IWADSelectMargin/IWADSelect" to="VBoxContainer/IWADSelectMargin/IWADSelect" method="_on_mouse_exited"]
[connection signal="file_selected" from="VBoxContainer/IWADSelectMargin/IWADSelect/FileDialog" to="." method="_on_iwad_file_selected"]
[connection signal="file_selected" from="VBoxContainer/IWADSelectMargin/IWADSelect/FileDialog" to="VBoxContainer/IWADSelectMargin/IWADSelect" method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="VBoxContainer/ContinueMargin/ContinueButton" to="." method="_on_continue_button_pressed"]
